--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,21 @@
+# Dependencies
+node_modules/
+
+# macOS system files
 .DS_Store
+.AppleDouble
+.LSOverride
+*.fileloc
+*.webloc
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build output
+.next/
+dist/
+
+# Environment
+.env
