--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.33",
+    "next": "14.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "typescript": "^5.4.5",
+    "tailwindcss": "^3.4.10",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19"
   },
   "devDependencies": {
-    "@types/node": "24.7.2",
-    "@types/react": "19.2.2",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "typescript": "^5.4.5"
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.39",
+    "@types/react-dom": "^18.2.15"
   }
 }
