--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "next": "14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "typescript": "^5.4.5",
     "tailwindcss": "^3.4.10",
     "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
+    "@types/node": "^20.16.6",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.15"
   }
