--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "typescript": "^5.4.5",
-    "tailwindcss": "^3.4.10",
+    "autoprefixer": "^10.4.19",
+    "chart.js": "^4.5.1",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.545.0",
+    "next": "^14.2.33",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "react": "18.3.1",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "18.3.1",
+    "recharts": "^3.2.1",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/node": "^20.16.6",
