--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "chart.js": "^4.5.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
-    "next": "^14.2.33",
+    "next": "^15.5.5",
     "postcss": "^8.4.38",
-    "react": "18.3.1",
+    "react": "^19.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^19.2.0",
     "recharts": "^3.2.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.4.5"
