--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "build": "^0.1.4",
     "chart.js": "^4.5.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
